# file_system

./: .gitignore  CMakeLists.txt  README.md  fs.c  fs.h  main.c
src/: main.c
src/cli/include/: cli.h
src/cli/source/: cli.c
src/fs/include/: dir.h  file.h  fs.h  general.h  init.h  print.h  utils.h
src/fs/source/: dir.c  file.c  init.c  print.c  utils.c
